WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
265720
[Wasm-GC] Fix casts on larger type indices
https://bugs.webkit.org/show_bug.cgi?id=265720
Summary
[Wasm-GC] Fix casts on larger type indices
Asumu Takikawa
Reported
2023-12-02 10:24:37 PST
There are some failures when casting GC types that have type indices greater than a byte, because there are some sketchy type casts in the cast validation code. It's reproducible using a test that just has more 256 or so typedefs and casts to those types.
Attachments
Add attachment
proposed patch, testcase, etc.
Asumu Takikawa
Comment 1
2023-12-02 11:07:36 PST
Pull request:
https://github.com/WebKit/WebKit/pull/21213
EWS
Comment 2
2023-12-05 14:10:01 PST
Committed
271571@main
(b151ff2597f0): <
https://commits.webkit.org/271571@main
> Reviewed commits have been landed. Closing PR #21213 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2023-12-05 14:11:24 PST
<
rdar://problem/119215339
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug