[Wasm-GC] Fix casts on larger type indices https://bugs.webkit.org/show_bug.cgi?id=265720

Reviewed by Justin Michaud.

Fix some bad C++ casts in the implementation of ref.cast that were causing
casts with larger type indices to fail to validate.

Also fixes another issue with cast validation, for the null-ness of the output
type.

* JSTests/wasm/gc/casts.js:
(testValidation):
* Source/JavaScriptCore/wasm/WasmB3IRGenerator.cpp:
(JSC::Wasm::B3IRGenerator::emitRefTestOrCast):
* Source/JavaScriptCore/wasm/WasmFunctionParser.h:
(JSC::Wasm::FunctionParser<Context>::parseExpression):

Canonical link: https://commits.webkit.org/271571@main